<resources>
    <string name="app_name">HLDSN</string>
    <string name="emergency_sos">SOS - EMERGENCY</string>
    <string name="contacts">Contacts</string>
    <string name="fire">Fire Rescue</string>
    <string name="edhi">Edhi Foundation</string>
    <string name="hospital">Hospital</string>
    <string name="police">Police</string>
    <string name="services">Services</string>
    <string name="camp_locations">CAMP Locations</string>
    <string name="volunteer_network">Volunteer Network</string>
    <string name="hazard_alert">Hazard Alert</string>
    <string name="hazard_alert_title">Pakistan Hazard Outlook</string>
    <string name="hazard_alert_subtitle">Color-coded prediction zones show likely and ongoing hazards. Tap a ring to see timing and impact details.</string>
    <string name="hazard_legend_title">Hazard legend</string>
    <string name="hazard_selected_title">Selected zone</string>
    <string name="hazard_loading">Loading hazard data…</string>
    <string name="hazard_error_title">Unable to load hazards</string>
    <string name="hazard_error_message">Could not reach hazard data sources. Please check your internet connection and try again.</string>
    <string name="hazard_retry">Retry</string>
    <string name="hazard_my_location">My Location</string>
    <string name="hazard_notification_channel">Hazard Alerts</string>
    <string name="hazard_notification_title">New Hazard Alert</string>
    <string name="hazard_collapsed_title">Hazard Alert</string>
    <string name="chats">Chats</string>
    <string name="information">Information</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="community_chat">Nearby Incidents</string>
    <string name="emergency_preparedness">Emergency Preparedness</string>
    <string name="first_aid_tips">First Aid Tips</string>
    <string name="emergency_first_aid_card">Emergency First Aid</string>
    <string name="emergency_first_aid_title">Emergency First Aid</string>
    <string name="emergency_first_aid_subtitle">Simple steps to help before medical help arrives.</string>
    <string name="first_aid_search_hint">Search CPR, bleeding, burns, choking…</string>
    <string name="first_aid_empty">No first aid tip found.</string>
    <string name="news">News</string>
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="search_emergency">Search police, ambulance, fire, hospital, city…</string>
    <string name="tap_call_hint">Tap call button to open phone dialer.</string>
    <string name="no_emergency_contact_found">No emergency contact found.</string>
    <string name="most_important_numbers">Most Important Numbers</string>
    <string name="most_important_numbers_subtitle">Pakistan-wide emergency contacts</string>
    <string name="province_contacts_subtitle">Province and city contacts</string>
    <string name="province_all">All</string>
    <string name="province_punjab">Punjab</string>
    <string name="province_sindh">Sindh</string>
    <string name="province_kpk">KPK</string>
    <string name="province_balochistan">Balochistan</string>
    <string name="province_islamabad">Islamabad</string>
    <string name="province_ajk">AJK</string>
    <string name="province_gb">Gilgit Baltistan</string>
    <string name="call">Call</string>
    <string name="contact_badge_pakistan">Pakistan</string>
    <string name="view_steps">View Steps</string>
    <string name="back">Back</string>
    <string name="contact_icon_desc">Contact icon</string>
    <string name="menu_icon_desc">Menu Icon</string>
    <string name="notification_icon_desc">Notification Icon</string>
    <string name="flood_banner_desc">Flood Banner</string>
    <string name="fire_icon_desc">Fire Icon</string>
    <string name="edhi_icon_desc">Edhi Icon</string>
    <string name="hospital_icon_desc">Hospital Icon</string>
    <string name="police_icon_desc">Police Icon</string>
    <string name="volunteer_click_here_underlined"><u>Click Here</u></string>
    <string name="news_back">Back</string>
    <string name="news_title">News</string>
    <string name="news_next_page">Next page</string>
    <string name="news_detail_title">News Details</string>
    <string name="news_image_desc">News image</string>
    <string name="news_read_more">Read more</string>
    <string name="news_read_less">Read less</string>
    <string name="news_sample_headline">Sample headline</string>
    <string name="news_sample_description">Sample description</string>
    <string name="news_fallback_notice">Showing offline news because live feed is unavailable.</string>

    <!-- Nearby Help Strings -->
    <string name="nearby_help">Find nearby Emergency</string>
    <string name="nearby_help_title">Nearby Help</string>
    <string name="nearby_help_subtitle">Emergency resources near your location</string>
    <string name="nearby_help_powered" />
    <string name="nearby_help_search_hint">Search hospitals, pharmacy, police…</string>
    <string name="nearby_help_permission_denied">Location permission is needed to find nearby help.</string>
    <string name="nearby_help_allow_location">Allow Location</string>
    <string name="nearby_help_loading">Finding nearby help…</string>
    <string name="nearby_help_empty">No nearby emergency resource found.</string>
    <string name="nearby_help_empty_radius">No nearby resource found. Try increasing radius.</string>
    <string name="nearby_help_retry">Retry Search</string>
    <string name="nearby_help_offline">Could not load nearby resources. Please check internet connection.</string>
    <string name="nearby_help_cached">Showing last saved nearby resources.</string>
    <string name="nearby_help_directions">Directions</string>
    <string name="nearby_help_call">Call</string>
    <string name="nearby_help_emergency_nearby">Emergency Nearby</string>
    <string name="nearby_help_away_km">%1$.1f km away</string>
    <string name="nearby_help_verified_local">Verified Local</string>
    <string name="nearby_help_radius_50km">50 km</string>
    <string name="nearby_help_search_larger">Search Larger Area</string>
    <string name="nearby_help_source_verified">Source: Verified Local</string>
    <string name="nearby_help_source_osm" />
    <string name="nearby_help_no_results">No nearby %1$s found.</string>
</resources>